[gd_scene load_steps=4 format=3 uid="uid://dxou81hae4tu6"]

[ext_resource type="Script" path="res://addons/BubbleDialogue/scripts/DialogueBubble.gd" id="1_faqas"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wxqwq"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_mm5nh"]

[node name="DialogueBubble" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -677.0
offset_bottom = -487.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wxqwq")
script = ExtResource("1_faqas")

[node name="TextLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "this is where the dialogue will be played yeeeeeeeeee"
autowrap_mode = 2

[node name="CharacterNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -360.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Miisan:"
autowrap_mode = 2

[node name="IndicatorMesh" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(451, 134)
rotation = -3.14159
scale = Vector2(29, 29)
mesh = SubResource("PrismMesh_mm5nh")
